--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,6 +66,7 @@ bind -r L resize-pane -R 2
 # use <prefix>+U to update.
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # -- Dracula Theme Configuration --------------------------------------------
 # available plugins:
