<prefix>C-l clear screen

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,6 +39,8 @@ unbind p
 bind -r C-h previous-window # select previous window
 bind -r C-l next-window     # select next window
 
+# clear screen
+bind C-l send-keys 'C-l'
 # -- Panes ----------------------------------------------------------------
 # pane navigation
 unbind Left
