--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,22 +65,29 @@ bind -r L resize-pane -R 2
 # use <prefix>+I to install.
 # use <prefix>+U to update.
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'catppuccin/tmux'
 
-# -- Dracula Theme Configuration --------------------------------------------
-# available plugins:
-# battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network,
-# network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn,
-# weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
-set -g @dracula-plugins "time"
 
-set -g @dracula-show-powerline true
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
+# -- Catppuccin Theme Configuration --------------------------------------------
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
 
-# time
-set -g @dracula-show-timezone false
-set -g @dracula-time-format "%F %a %R"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 set -g status-position top
 
